--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,6 @@
+---
 name: Build Artifacts
+
 on:
   release:
     types: [created]
@@ -18,6 +20,7 @@ concurrency:
 
 jobs:
   multiplatform_build:
+    # Build PRs only if the event comes from Dependabot. Skip branch pushes
     if: github.event.pull_request.user.login != 'dependabot[bot]' || github.event_name == 'pull_request'
     strategy:
       fail-fast: false
@@ -50,7 +53,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           no-cache: true
           context: ${{ matrix.component.context }}
@@ -61,3 +64,4 @@ jobs:
           provenance: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+        
