--- a/.github/release-drafter-config.yml
+++ b/.github/release-drafter-config.yml
@@ -1,6 +1,7 @@
 name-template: 'v$RESOLVED_VERSION'
 tag-template: 'v$RESOLVED_VERSION'
 
+
 categories:
 - title: '💥 Breaking Changes'
   labels:
@@ -9,14 +10,17 @@ categories:
   labels:
   - feature
   - enhancement
-- title: '🐛 Bug Fixes'
+- title: '🐞 Bug Fixes'
   labels:
   - bug
   - fix
   - bugfix
-- title: '🛠️ Technical Debt'
+- title: '⚙️ Technical Debt'
   labels:
   - refactor
+- title: '📝 Documentation'
+  labels:
+  - documentation
 
 change-template: '- $TITLE (#$NUMBER) by @$AUTHOR'
 no-changes-template: 'No significant changes'
