--- a/.github/auto-labeler-config.yaml
+++ b/.github/auto-labeler-config.yaml
@@ -1,5 +1,4 @@
 ---
-
 conventional-commits:
 - type: 'fix'
   nouns: ['FIX', 'Fix', 'fix', 'FIXED', 'Fixed', 'fixed']
@@ -14,7 +13,7 @@ conventional-commits:
   nouns: ['refactor', 'Refactor']
   labels: ['refactor']
 - type: 'documentation'
-  nouns: ['doc', 'document', 'documentation']
+  nouns: ['docs', 'doc', 'document', 'documentation']
   labels: ['documentation']
 - type: 'build'
   nouns: ['build', 'rebuild']
