--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -3,7 +3,6 @@
 # name=value
 
 GITLEAKS_LOG_LEVEL=warn
-VALIDATE_BASH_EXEC=false
 VALIDATE_JAVASCRIPT_PRETTIER=false
 VALIDATE_JAVASCRIPT_STANDARD=false
 VALIDATE_JSCPD=false
@@ -12,5 +11,9 @@ VALIDATE_KUBERNETES_KUBECONFORM=false
 VALIDATE_MARKDOWN_PRETTIER=false
 VALIDATE_YAML_PRETTIER=false
 
-# TODO: fix issues detected by CHECKOV
-VALIDATE_CHECKOV=false
+# TODO: fix python files and enable the check again
+VALIDATE_PYTHON_BLACK=false
+VALIDATE_PYTHON_FLAKE8=false
+VALIDATE_PYTHON_MYPY=false
+VALIDATE_PYTHON_PYINK=false
+VALIDATE_PYTHON_PYLINT=false
