--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -4,6 +4,7 @@
 
 GITLEAKS_LOG_LEVEL=warn
 VALIDATE_BASH_EXEC=false
+VALIDATE_GITHUB_ACTIONS_ZIZMOR=false
 VALIDATE_GO=false
 VALIDATE_JAVASCRIPT_PRETTIER=false
 VALIDATE_JAVASCRIPT_STANDARD=false
@@ -11,6 +12,7 @@ VALIDATE_JSCPD=false
 VALIDATE_JSON_PRETTIER=false
 VALIDATE_KUBERNETES_KUBECONFORM=false
 VALIDATE_MARKDOWN_PRETTIER=false
+VALIDATE_TRIVY=false
 VALIDATE_YAML_PRETTIER=false
 
 # TODO: fix issues detected by CHECKOV
